[gd_scene load_steps=4 format=2]

[ext_resource path="res://MiscRelated/DialogRelated/Assets/Shared/Dialog_DarkGrayBorder_ForContent_4x4.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/DialogRelated/Assets/Shared/Dialog_BrownBackground_ForContent_3x3.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/DialogRelated/Controls/DialogMainPanel/DialogMainPanel.gd" type="Script" id=3]

[node name="DialogMainPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 4.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 36.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Marginer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="Marginer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 33.0
margin_bottom = 33.0
mouse_filter = 2

[node name="ContentPanel" type="VBoxContainer" parent="Marginer/VBoxContainer"]
margin_right = 26.0
margin_bottom = 26.0
mouse_filter = 2
size_flags_vertical = 3
